package seedu.address.model.academic;

import static java.util.Objects.requireNonNull;

import java.util.Collections;
import java.util.Comparator;
import java.util.HashSet;
import java.util.List;
import java.util.Objects;
import java.util.Optional;
import java.util.Set;

import seedu.address.commons.util.ToStringBuilder;

/**
 * Represents a student's academic profile.
 *
 * An {@code Academics} object encapsulates a set of {@link Subject}s
 * and optional description describing the student's academic progress or remarks.
 *
 * This abstraction allows future extensions such as grades, performance tracking,
 * or historical academic data without modifying the {@code Person} class.
 */
public class Academics {

    private final Set<Subject> subjects;
    private final Optional<String> description;

    /**
     * Constructs an {@code Academics} object with subjects and optional description.
     */
    public Academics(Set<Subject> subjects, Optional<String> description) {
        requireNonNull(subjects);
        requireNonNull(description);
        this.subjects = new HashSet<>(subjects);
        this.description = description;
    }

    /**
     * Constructs an {@code Academics} object with subjects and no description.
     */
    public Academics(Set<Subject> subjects) {
        this(subjects, Optional.empty());
    }

    /**
     * Constructs an {@code Academics} object with empty subjects and no description.
     */
    public Academics() {
        this(new HashSet<>(), Optional.empty());
    }

    public Set<Subject> getSubjects() {
        return Collections.unmodifiableSet(subjects);
    }

    public Optional<String> getDescription() {
        return description;
    }

    public List<Subject> getSortedSubjects() {
        return subjects.stream()
                .sorted(Comparator.comparing(s -> s.getName().toLowerCase()))
                .toList();
    }

    @Override
    public boolean equals(Object other) {
        return other == this
                || (other instanceof Academics
                && subjects.equals(((Academics) other).subjects)
                && description.equals(((Academics) other).description));
    }

    @Override
    public int hashCode() {
        return Objects.hash(subjects, description);
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("subjects", getSortedSubjects())
                .add("description", description.orElse(null))
                .toString();
    }
}
